--- a/bs-config.json
+++ b/bs-config.json
@@ -1,11 +1,5 @@
 {
-    "port": 8686,
-    "files": [
-        "./*.{html,htm,css,js}",
-        "./**/*.{html,htm,css,js}"
-    ],
-    "server": {
-        "baseDir": "./app/views"
-    },
-    "ghostMode": false
+  "server": {
+      "baseDir": "./app/public"
+  }
 }
